--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@vueuse/sound": "^1.1.7",
     "animejs": "^3.2.1",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.15.1",
     "file-loader": "^6.1.0",
     "interactjs": "^1.10.2",
